prometheus/monitoring.lb.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prom-operator-01
    app.kubernetes.io/name: grafana
  ports:
  - port: 80
    targetPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prom-operator-01
    app.kubernetes.io/name: grafana
  ports:
  - port: 80
    targetPort: 9090
