prometheus/monitoring.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # http://grafana.localtest.me
  - host: grafana.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-01-grafana
            port:
              number: 80
  # http://prometheus.localtest.me
  - host: prometheus.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-01-kube-prom-prometheus
            port:
              number: 9090
  # http://alert.localtest.me
  - host: alert.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-01-kube-prom-alertmanager
            port:
              number: 9093
  # http://operator.localtest.me
  - host: operator.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-01-kube-prom-operator
            port:
              number: 443
  # http://kube.localtest.me
  - host: kube.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-operator-01-kube-state-metrics
            port:
              number: 8080
  # http://prom.localtest.me
  - host: prom.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
